# salada

./: .gitignore  Cargo.toml  LICENSE  README.md  dbinit.pl
src/: calendar.rs  contact.rs  contactgroup.rs  db.rs  http.rs  http_handler.rs  jmap_handler.rs  logger.rs  mailbox.rs  record.rs  salada.rs  static_handler.rs  upload_handler.rs  util.rs
