[package]
name        = "salada"
version     = "0.0.4"
description = "JMAP server"
license     = "MIT"
authors     = [ "Robert Norris <robn@robn.io>" ]
repository  = "https://github.com/robn/salada"

[[bin]]
name = "salada"

[dependencies]
jmap = "0.0.4"
hyper = "*"
rustc-serialize = "*"
rusqlite = "*"
log = "*"
time = "*"
